<resources>
    <string name="app_name">Mars Rover Photos</string>
    <string name="title_activity_image">Image Viewer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="all_rights_reserved_fmt">All rights reserved © %d</string>

    <string name="ad_image_activity">ca-app-pub-7516059448019339/6708131350</string>
    <string name="ad_item_photo">ca-app-pub-7516059448019339/7310766580</string>
    <string name="ad_application_id">ca-app-pub-7516059448019339~6607949007</string>
    <string name="popular_title">The most popular Mars photos</string>
    <string name="favorite_title">My favorite Mars photos</string>
    <string name="title_activity_compose_about_app">About the App</string>
    <string name="about_description">Discover Mars with exploration rovers!\nA great selection of recent and historic photos directly from the Red Planet.\nSee what Mars rovers discovered during their missions.\nMaybe you\'ll even spot signs of Martian life ;-)</string>
    <string name="clear_cache">Clear cache</string>
    <string name="provided_api">API provided by https://api.nasa.gov/api.html#MarsPhotos</string>
    <string name="action_rate">Rate this app</string>
    <string name="label_photos_total">Total photos: </string>
    <string name="sol_description">The term sol is used by planetary astronomers to refer to the duration of a solar day on Mars.\nA mean Martian solar day is 24 hours, 39 minutes, and 35.244 seconds.</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_photos_title">The rover didn\'t take any photos on this date.</string>
    <string name="favorite_empty_btn">Go to rovers</string>
    <string name="favorite_empty_title">No favorite photos yet.\nYou can save any photos you like.\nJust mark them as "favorite".</string>

    <!-- Navigation labels -->
    <string name="nav_rovers">Rovers</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_about">About</string>
</resources>
