...
    Flag("flag"),
    CameraAlt("photo_camera"),
    Error("error"),
    CheckCircle("check_circle"),
    Close("close"),
    ExpandMore("expand_more"),
    Tune("tune"),
    Delete("delete"),
    Public("public"),
    ChevronRight("chevron_right"),
    Reviews("reviews"),
    Collections("collections"),
    Schedule("schedule"),
...
